Debug finalizado pasar de turno